force-app/main/default/objects/DailyStatus__c/DailyStatus__c.object-meta.xml
<CustomObject>
    <label>Daily Status</label>
    <nameField>
        <displayFormat>D-{00000}</displayFormat>
        <label>Daily Status #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>