force-app/main/default/objects/DailyStatus__c/fields/Ticket_User__c.field-meta.xml
<CustomField>
    <fullName>Ticket_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ticket User</label>
    <referenceTo>Ticket_User__c</referenceTo>
    <relationshipName>DailyStatuses</relationshipName>
    <type>Lookup</type>
</CustomField>